--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "babel --presets es2015,stage-0 -d dist/ src/",
-    "test": "ava"
+    "test": "ava",
+    "debug": "babel --presets es2015,stage-0 -d dist/ src/ && node --inspect-brk ./dist/index.js"
   },
   "repository": {
     "type": "git",
