--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "debug": "./scripts/debug.sh",
     "build": "./scripts/build.sh",
     "test": "./scripts/test.sh",
-    "text:coverage": "nyc report",
+    "test:coverage": "nyc report",
     "start": "./scripts/start.sh",
     "stop": "./scripts/stop.sh"
   },
